refactor: minor refactorings for indenting, var, and FQNs